--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,10 +23,10 @@ a {
 
 .panel-faq {
 	padding:10px;
-	background: rgba(0, 0, 0, 0.7);
+	background: rgba(0, 0, 0, 0.8);
 	border-radius:5px;
 	color:#fff;
-	margin-bottom:20px;
+	margin-bottom:30px;
 }
 .panel-faq h2{
 	color:lime;
@@ -35,7 +35,11 @@ a {
 .blog-panel p{
 	font-size:1.3em;
 }
-
+.blog-panel h2{
+	border-bottom: solid 1px #ccc;
+	padding-bottom:10px;
+	margin-bottom:15px;
+}
 
 .panel2{
 	padding: 10px;
